Фиксы, обновления
Удалена поддержка GroupManager, MyWarp, LWC, Factions, ProtectionStones, Residence
WE/WG 7
Towny Advanced (не тестировалось)
Удалена функция автосохранений
Фикс регена в новых версиях
Фикс скрипта рестарта
Фикс бэкапов в облака
Добавлена опция переключения удаления неактивных игроков из регионов (раньше автоматически удаляло)
Удалены файлы либ из плагина
Нужные либы будут подгружаться ядром
Небольшая чистка по подсказкам IDEA, обновлено большинство deprecated кода, оптимизация импортов
Некоторые изменения требуют java 16+ и версию 1.16+

Читающий, извини, что не по коммиту на изменение, это скорее солянка и доведение до ума того, что делалось когда-то.